k8-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8-image
spec:
  selector:
    matchLabels:
      app: k8-image
  replicas: 2 
  template:
    metadata:
      labels:
        app: k8-image
    spec:
      containers:
      - name: k8-image
        image: gcr.io/demoreactive-264604/k8-image
        ports:
        - containerPort: 8091
---
apiVersion: v1
kind: Service
metadata:
  name: k8-image-service
  labels:
    name: k8-image-service
spec:
  ports:
    - port: 8080
      targetPort: 8091
      protocol: TCP
  selector:
    app: k8-image
  type: NodePort
