k8-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gcloud-ingress
spec:
  rules:
  - http:
      paths:
      - path: /hello/cloud
        backend:
          serviceName: k8-image-service
          servicePort: 32001
